@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 11-Jan-2012 Jean-Marie Simonet
  $ Updating installation ini file be-BY
+ # [#27694] *Finder search broken because of filters Country and Region.
 
 -------------------- 2.5.0 Beta2 Release [10-Jan-2012] ------------------
 
